# AIcopilotsql

./: .gitattributes  .gitignore  BINARY_PACKAGE_SUMMARY.md  CMakeLists.txt  COMPILE_GUIDE.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  EULEROS_PACKAGE_SUMMARY.md  EULEROS_SP5_COMPATIBILITY_GUIDE.md  EULEROS_USAGE_GUIDE.md  FINAL_EULEROS_SP5_SUMMARY.md  FINAL_EULEROS_SUMMARY.md  MODIFICATION_SUMMARY.md  Makefile  PROJECT_FILES.md  PROJECT_FINAL.md  PROJECT_STRUCTURE.md  README.md  README_BUILD.md  README_WINDOWS.md  SOLUTION_SUMMARY.md  SQL优化查询最终版.rar  USAGE_GUIDE.md  build-euleros-compatible.sh  build-euleros.sh  build-simple.bat  build-simple.sh  build-static.sh  build.bat  build.sh  build_and_package.bat  build_utf8.bat  build_windows.bat  check_dependencies.sh  check_deps.bat  clean.bat  create-standalone.sh  create_sql_optimizer_package.sh  fix_encoding.bat  install_curl.bat  (+13 more)
AIAgent-euleros-2025.07.28/: README-EulerOS.txt  check-euleros-deps.sh  install-euleros.sh  run-euleros.sh
AIAgent-euleros-sp5-2025.07.28/: install-euleros-sp5.sh  run-euleros-sp5.sh
AIAgent-euleros-sp5-2025.07.28/config/: ai_models.json
SQL_AI_Copilot_Simple/: 使用说明.txt  启动程序.bat  启动程序_UTF8.bat  启动程序_修复版.bat  版本信息.txt  配置向导.bat
SQL_AI_Copilot_Simple/docs/: 原始README.md
config/: ai_models.example.json  ai_models.json
include/: agent1_input.h  agent2_diagnose.h  agent3_strategy.h  agent4_report.h  agent5_interactive.h  ai_engine.h  utils.h
src/agent1_input/: agent1_input.cpp
src/agent2_diagnose/: agent2_diagnose.cpp
src/agent3_strategy/: agent3_strategy.cpp
src/agent4_report/: agent4_report.cpp
src/agent5_interactive/: agent5_interactive.cpp
src/ai_engine/: ai_engine.cpp  ai_engine_simple.cpp  ai_engine_winhttp.cpp
src/utils/: utils.cpp
